--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
+        "axios": "^0.18.0",
+        "bcrypt-cli": "^1.1.0",
+        "bcrypt-nodejs": "0.0.3",
         "body-parser": "^1.18.2",
+        "dotenv": "^5.0.1",
         "express": "^4.16.2",
+        "express-session": "^1.15.6",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
         "pg": "^7.4.1",
         "pg-hstore": "^2.3.2",
         "sequelize": "^4.37.6",
