--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "pg": "^7.4.1",
         "pg-hstore": "^2.3.2",
         "sequelize": "^4.37.6",
+        "socket.io": "^2.1.0",
+        "socket.io-client": "^2.1.0",
         "twilio": "^3.16.0",
         "watson-developer-cloud": "^3.4.1"
     },
